# baymesh-cli

./: CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/workflows/: lint-and-test.yml  release.yml
src/baymesh/: baymesh_versions.py  node_validation.py
src/baymesh/cli/: __init__.py  __main__.py  devices.py  echo.py  node_setup.py
tests/: test_stub.py
